; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlDosPathNameToNtPathName_U.c_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/ntdll/extr_RtlDosPathNameToNtPathName_U.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i32] [i32 37, i32 83, i32 0], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*)* @test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [512 x i32], align 16
  %8 = alloca [512 x i32], align 16
  %9 = alloca [512 x i32], align 16
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  %12 = getelementptr inbounds [512 x i32], [512 x i32]* %7, i64 0, i64 0
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @swprintf(i32* %12, i8* bitcast ([3 x i32]* @.str to i8*), i8* %13)
  %15 = load i8*, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %3
  %18 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @swprintf(i32* %18, i8* bitcast ([3 x i32]* @.str to i8*), i8* %19)
  %21 = getelementptr inbounds [512 x i32], [512 x i32]* %8, i64 0, i64 0
  store i32* %21, i32** %10, align 8
  br label %22

22:                                               ; preds = %17, %3
  %23 = load i8*, i8** %6, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = getelementptr inbounds [512 x i32], [512 x i32]* %9, i64 0, i64 0
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @swprintf(i32* %26, i8* bitcast ([3 x i32]* @.str to i8*), i8* %27)
  %29 = getelementptr inbounds [512 x i32], [512 x i32]* %9, i64 0, i64 0
  store i32* %29, i32** %11, align 8
  br label %30

30:                                               ; preds = %25, %22
  %31 = getelementptr inbounds [512 x i32], [512 x i32]* %7, i64 0, i64 0
  %32 = load i32*, i32** %10, align 8
  %33 = load i32*, i32** %11, align 8
  %34 = call i32 @test2(i32* %31, i32* %32, i32* %33)
  ret void
}

declare dso_local i32 @swprintf(i32*, i8*, i8*) #1

declare dso_local i32 @test2(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
